# DQN-NRP

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Instance/: benchmark.sh  q_net.pt  q_target.pt  validator.sh
NurseRostering/: CMakeLists.txt  main.cpp
NurseRostering/include/: DebugFlag.h  INRC2.h  NurseRostering.h  Solution.h  Solver.h  utility.h
NurseRostering/src/: INRC2.cpp  NurseRostering.cpp  Solution.cpp  Solver.cpp  utility.cpp
simulator/: CMakeLists.txt  main.cpp
simulator/config/: seq.txt
simulator/include/: batch_test.h  threadpool.h
simulator/src/: batch_test.cpp
